force-app/main/default/objects/Message_Queue__c/Message_Queue__c.object-meta.xml
<CustomObject>
    <description>Durable queue of outbound integration messages. Each record carries a JSON payload describing the external API to call and how to process the response. Drained asynchronously by MessageQueueScheduler / MessageQueueProcessor.</description>
    <label>Message Queue</label>
    <nameField>
        <displayFormat>MQ-{00000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Message Queue Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>