force-app/main/default/objects/Message_Queue__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <label>Attempts</label>
    <description>Number of delivery attempts made so far.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>