force-app/main/default/objects/Message_Queue__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <description>Optional caller-supplied idempotency key. Marked unique so duplicate enqueues can be deduped.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>