force-app/main/default/objects/Message_Queue__c/fields/Dedup_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedup_Key__c</fullName>
    <label>Dedup Key</label>
    <description>Deduplication key: the payload's "dedupKey" if supplied, otherwise a SHA-256 hash of method + endpoint + body. Indexed (External Id) so enqueue() can match recent duplicates quickly.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
</CustomField>