force-app/main/default/objects/Message_Queue__c/fields/Dedup_Window_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Dedup_Window_Seconds__c</fullName>
    <label>Dedup Window (Seconds)</label>
    <description>Effective deduplication window applied when this message was enqueued. 0 / blank means deduplication was disabled for it.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>