force-app/main/default/objects/Message_Queue__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <description>Convenience copy of the target endpoint (often a callout:NamedCredential reference). Reporting only; the payload is the source of truth.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>