force-app/main/default/objects/Message_Queue__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <description>Diagnostic detail captured on the most recent failed attempt.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>