force-app/main/default/objects/Message_Queue__c/fields/Is_Batch__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch__c</fullName>
    <label>Is Batch</label>
    <description>True when this message carries a batch of records in one callout (e.g. a Census addressbatch CSV upload). The engine processes at most one batch message per execution.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>