force-app/main/default/objects/Message_Queue__c/fields/Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts__c</fullName>
    <label>Max Attempts</label>
    <description>Maximum delivery attempts before the message is marked Failed.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>3</defaultValue>
</CustomField>