force-app/main/default/objects/Message_Queue__c/fields/Next_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_At__c</fullName>
    <label>Next Attempt At</label>
    <description>Earliest time a Retry message becomes eligible again (exponential backoff).</description>
    <type>DateTime</type>
</CustomField>