force-app/main/default/objects/Message_Queue__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload (JSON)</label>
    <description>JSON instruction set describing the external call: method, endpoint, headers, body, timeout, expected success codes, and the Apex response handler to route to.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>