force-app/main/default/objects/Message_Queue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <description>Processing priority. Lower numbers are drained first (1 = highest).</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>5</defaultValue>
</CustomField>