force-app/main/default/objects/Message_Queue__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <label>Processed At</label>
    <description>Time the message reached a terminal Completed state.</description>
    <type>DateTime</type>
</CustomField>