force-app/main/default/objects/Message_Queue__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <description>Id of the originating record (e.g. the Account that triggered the message). Polymorphic, stored as text.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>