force-app/main/default/objects/Message_Queue__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <description>Raw body returned by the external API on the most recent attempt.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>