force-app/main/default/objects/Message_Queue__c/fields/Response_Handler__c.field-meta.xml
<CustomField>
    <fullName>Response_Handler__c</fullName>
    <label>Response Handler</label>
    <description>Fallback Apex class name (implementing MessageQueueResponseHandler) used when the payload does not name one.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>