force-app/main/default/objects/Message_Queue__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <label>Response Status Code</label>
    <description>HTTP status code returned on the most recent attempt.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>