force-app/main/default/objects/Message_Queue__c/fields/Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_At__c</fullName>
    <label>Scheduled At</label>
    <description>Earliest time the message should first be processed. Enables future-dated / delayed delivery.</description>
    <type>DateTime</type>
</CustomField>